# Sistema-de-Gest-o-de-Biblioteca

./: pyproject.toml  run.py
SGB/: database.py  main.py  models.py  pyproject.toml  settings.py  teste2.py
SGB/migrations/models/: 0_20231216171441_init.py
app/: config.py  init.py
app/biblioteca/: crud.py  endpoints.py  models.py  schemas.py
